fix: resolve all compilation warnings (deprecation + unchecked)
- Replace deprecated MorphiumConfig.getXxx() calls with settings-object
  alternatives (connectionSettings(), writerSettings(), driverSettings(),
  collectionCheckSettings(), objectMappingSettings())
- Replace raw types with parameterized generics where possible
  (AsyncOperationCallback<T>, Class<?>, Map<String, Object>, List<?>)
- Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance()
- Replace deprecated Byte(byte) constructor with direct cast
- Fix varargs ambiguity in Expr.java
- Add method-level @SuppressWarnings("unchecked") only where casts are
  genuinely unavoidable due to type erasure (self-type return patterns,
  reflection-based deserialization)
- Enable -Xlint:deprecation,unchecked in pom.xml to catch future warnings